tests/values/values.exp
Error ---------------------------------------------------------- classes.js:26:2

Cannot cast `'yo'` to `$Values` because string [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:27:2

Cannot cast `123` to `$Values` because number [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:28:3

Cannot cast function to `$Values` because function [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:29:2

Cannot cast `true` to `$Values` because boolean [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:31:2

Cannot cast `'yo'` to `$Values` because string [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:32:2

Cannot cast `123` to `$Values` because number [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:33:3

Cannot cast function to `$Values` because function [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:34:2

Cannot cast `true` to `$Values` because boolean [1] is incompatible with
`$Values` [2].


Error ---------------------------------------------------------- classes.js:36:2

Cannot cast `'yo'` to `$Values` because string [1] is incompatible with
number [2].


Error ---------------------------------------------------------- classes.js:39:3

Cannot cast function to `$Values` because function [1] is incompatible with
number [2].


Error ---------------------------------------------------------- classes.js:41:2

Cannot cast `true` to `$Values` because boolean [1] is incompatible with
number [2].


Error: classes.js:46
 46: ((() => {}): $Values<SomeProps>); // Error: Even though there is a method,
       ^^^^^^^^ function. This type is incompatible with
 46: ((() => {}): $Values<SomeProps>); // Error: Even though there is a method,
                  ^^^^^^^^^^^^^^^^^^ union: string(s) | number
  Member 1:
   18:   c: string;
            ^^^^^^ string
  Error:
   46: ((() => {}): $Values<SomeProps>); // Error: Even though there is a method,
         ^^^^^^^^ function. This type is incompatible with
   18:   c: string;
            ^^^^^^ string
  Member 2:
   17:   b: string;
            ^^^^^^ string
  Error:
   46: ((() => {}): $Values<SomeProps>); // Error: Even though there is a method,
         ^^^^^^^^ function. This type is incompatible with
   17:   b: string;
            ^^^^^^ string
  Member 3:
   16:   a: number;
            ^^^^^^ number
  Error:
   46: ((() => {}): $Values<SomeProps>); // Error: Even though there is a method,
         ^^^^^^^^ function. This type is incompatible with
   16:   a: number;
            ^^^^^^ number

Error: classes.js:48
 48: (true: $Values<SomeProps>); // Error: There is no property with the type of
      ^^^^ boolean. This type is incompatible with
 48: (true: $Values<SomeProps>); // Error: There is no property with the type of
            ^^^^^^^^^^^^^^^^^^ union: string(s) | number
  Member 1:
   18:   c: string;
            ^^^^^^ string
  Error:
   48: (true: $Values<SomeProps>); // Error: There is no property with the type of
        ^^^^ boolean. This type is incompatible with
   18:   c: string;
            ^^^^^^ string
  Member 2:
   17:   b: string;
            ^^^^^^ string
  Error:
   48: (true: $Values<SomeProps>); // Error: There is no property with the type of
        ^^^^ boolean. This type is incompatible with
   17:   b: string;
            ^^^^^^ string
  Member 3:
   16:   a: number;
            ^^^^^^ number
  Error:
   48: (true: $Values<SomeProps>); // Error: There is no property with the type of
        ^^^^ boolean. This type is incompatible with
   16:   a: number;
            ^^^^^^ number

Error ---------------------------------------------------------- classes.js:51:2

Cannot cast `'yo'` to `$Values` because string [1] is incompatible with
number [2].


Error ---------------------------------------------------------- classes.js:54:3

Cannot cast function to `$Values` because function [1] is incompatible with
number [2].


Error ---------------------------------------------------------- classes.js:56:2

Cannot cast `true` to `$Values` because boolean [1] is incompatible with
number [2].


Error -------------------------------------------------------- non_object.js:3:8

boolean [1] is not an object.


Error -------------------------------------------------------- non_object.js:5:7

boolean [1] is not an object.


Error -------------------------------------------------------- non_object.js:7:8

boolean [1] is not an object.


Error ------------------------------------------------------ object_types.js:6:2

Cannot cast `123` to `NoProps` because number [1] is incompatible with
`NoProps` [2].


Error ------------------------------------------------------ object_types.js:7:2

Cannot cast `345` to `NoReadProps` because number [1] is incompatible with
`NoReadProps` [2].


Error ----------------------------------------------------- object_types.js:11:2

Cannot cast `123` to `OneProp` because number [1] is incompatible with
string [2].


Error ----------------------------------------------------- object_types.js:12:2

Cannot cast `true` to `OneProp` because boolean [1] is incompatible with
string [2].


Error ---------------------------------------------------- object_types.js:14:16

Cannot cast `null` to number because string [1] is incompatible with number [2].


Error: object_types.js:20
 20: (true: ManyProps); // Error: There is no property with the type of boolean.
      ^^^^ boolean. This type is incompatible with
 20: (true: ManyProps); // Error: There is no property with the type of boolean.
            ^^^^^^^^^ union: number | string(s)
  Member 1:
   17: type ManyProps = $Values<{ a: string, b: string, c: number }>;
                                                           ^^^^^^ number
  Error:
   20: (true: ManyProps); // Error: There is no property with the type of boolean.
        ^^^^ boolean. This type is incompatible with
   17: type ManyProps = $Values<{ a: string, b: string, c: number }>;
                                                           ^^^^^^ number
  Member 2:
   17: type ManyProps = $Values<{ a: string, b: string, c: number }>;
                                                ^^^^^^ string
  Error:
   20: (true: ManyProps); // Error: There is no property with the type of boolean.
        ^^^^ boolean. This type is incompatible with
   17: type ManyProps = $Values<{ a: string, b: string, c: number }>;
                                                ^^^^^^ string
  Member 3:
   17: type ManyProps = $Values<{ a: string, b: string, c: number }>;
                                     ^^^^^^ string
  Error:
   20: (true: ManyProps); // Error: There is no property with the type of boolean.
        ^^^^ boolean. This type is incompatible with
   17: type ManyProps = $Values<{ a: string, b: string, c: number }>;
                                     ^^^^^^ string

Error: object_types.js:23
 23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                    ^^^^^^^^^ number. This type is incompatible with
 23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                                ^^^^^^^^^^^^^^^^ union: string | boolean
  Member 1:
   23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                                  ^^^^^^ string
  Error:
   23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                      ^^^^^^^^^ number. This type is incompatible with
   23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                                  ^^^^^^ string
  Member 2:
   23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                                           ^^^^^^^ boolean
  Error:
   23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                      ^^^^^^^^^ number. This type is incompatible with
   23: (((null: any): ManyProps): string | boolean); // Error: There is no number in
                                           ^^^^^^^ boolean

Error: object_types.js:27
 27: ('yo': DictProps); // Error: There is no property with the type of string.
      ^^^^ string. This type is incompatible with
 27: ('yo': DictProps); // Error: There is no property with the type of string.
            ^^^^^^^^^ union: number | boolean
  Member 1:
   26: type DictProps = $Values<{ a: boolean, [key: string]: number }>;
                                                             ^^^^^^ number
  Error:
   27: ('yo': DictProps); // Error: There is no property with the type of string.
        ^^^^ string. This type is incompatible with
   26: type DictProps = $Values<{ a: boolean, [key: string]: number }>;
                                                             ^^^^^^ number
  Member 2:
   26: type DictProps = $Values<{ a: boolean, [key: string]: number }>;
                                     ^^^^^^^ boolean
  Error:
   27: ('yo': DictProps); // Error: There is no property with the type of string.
        ^^^^ string. This type is incompatible with
   26: type DictProps = $Values<{ a: boolean, [key: string]: number }>;
                                     ^^^^^^^ boolean

Error: object_types.js:32
 32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                    ^^^^^^^^^ number. This type is incompatible with
 32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                                ^^^^^^^^^^^^^^^^ union: string | boolean
  Member 1:
   32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                                  ^^^^^^ string
  Error:
   32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                      ^^^^^^^^^ number. This type is incompatible with
   32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                                  ^^^^^^ string
  Member 2:
   32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                                           ^^^^^^^ boolean
  Error:
   32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                      ^^^^^^^^^ number. This type is incompatible with
   32: (((null: any): DictProps): string | boolean); // Error: There is no number in
                                           ^^^^^^^ boolean

Error: object_types.js:40
 40: (true: $Values<CallableProp>); // Error: There is no property with the type of
      ^^^^ boolean. This type is incompatible with
 40: (true: $Values<CallableProp>); // Error: There is no property with the type of
            ^^^^^^^^^^^^^^^^^^^^^ union: number | string
  Member 1:
   35: interface CallableProp { a: string; b: number; (): boolean }
                                              ^^^^^^ number
  Error:
   40: (true: $Values<CallableProp>); // Error: There is no property with the type of
        ^^^^ boolean. This type is incompatible with
   35: interface CallableProp { a: string; b: number; (): boolean }
                                              ^^^^^^ number
  Member 2:
   35: interface CallableProp { a: string; b: number; (): boolean }
                                   ^^^^^^ string
  Error:
   40: (true: $Values<CallableProp>); // Error: There is no property with the type of
        ^^^^ boolean. This type is incompatible with
   35: interface CallableProp { a: string; b: number; (): boolean }
                                   ^^^^^^ string

Error: object_types.js:43
 43: ((() => true): $Values<CallableProp>); // Error: There is no property with a
       ^^^^^^^^^^ function. This type is incompatible with
 43: ((() => true): $Values<CallableProp>); // Error: There is no property with a
                    ^^^^^^^^^^^^^^^^^^^^^ union: number | string
  Member 1:
   35: interface CallableProp { a: string; b: number; (): boolean }
                                              ^^^^^^ number
  Error:
   43: ((() => true): $Values<CallableProp>); // Error: There is no property with a
         ^^^^^^^^^^ function. This type is incompatible with
   35: interface CallableProp { a: string; b: number; (): boolean }
                                              ^^^^^^ number
  Member 2:
   35: interface CallableProp { a: string; b: number; (): boolean }
                                   ^^^^^^ string
  Error:
   43: ((() => true): $Values<CallableProp>); // Error: There is no property with a
         ^^^^^^^^^^ function. This type is incompatible with
   35: interface CallableProp { a: string; b: number; (): boolean }
                                   ^^^^^^ string

Error ----------------------------------------------------- object_types.js:71:2

Cannot cast `'DIAMONDS'` to `SuiteEnum` because string [1] is incompatible with
string enum [2].


Error ----------------------------------------------------- object_types.js:72:2

Cannot cast `'Magic'` to `SuiteEnum` because string [1] is incompatible with
string enum [2].


Error ---------------------------------------------------- object_types.js:73:15

Cannot cast `'Diamonds'` to `SuiteEnum` because string [1] is incompatible with
string enum [2].


Error ---------------------------------------------------- object_types.js:79:12

Cannot call `magicTrick` with `'DIAMONDS'` bound to `suite` because string [1]
is incompatible with string enum [2].


Error ---------------------------------------------------- object_types.js:80:12

Cannot call `magicTrick` with `'Magic'` bound to `suite` because string [1] is
incompatible with string enum [2].


Error ---------------------------------------------------- object_types.js:81:25

Cannot call `magicTrick` with `'Diamonds'` bound to `suite` because string [1]
is incompatible with string enum [2].


Error ----------------------------------------------------- object_types.js:95:2

Cannot cast `'DIAMONDS'` to `FrozenSuiteEnum` because string [1] is incompatible
with string enum [2].


Error ----------------------------------------------------- object_types.js:96:2

Cannot cast `'Magic'` to `FrozenSuiteEnum` because string [1] is incompatible
with string enum [2].


Error ---------------------------------------------------- object_types.js:97:15

Cannot cast `'Diamonds'` to `FrozenSuiteEnum` because string [1] is incompatible
with string enum [2].



Found 39 errors
